<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">DslrDashboard</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search_usb">Search for camera</string>
    <string name="menu_close_usb">Close USB connection</string>
    <string name="title_activity_main">DslrDashboard</string>
    <string name="about">
    &lt;b&gt;&lt;a href="http://forum.xda-developers.com/showpost.php?p=17428159&amp;postcount=1"&gt;DSLR Dashboard V0.30.6 beta&lt;/a&gt;&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;
    by&lt;br/&gt;&lt;br/&gt;
    Zoltan Hubai&lt;br/&gt;&lt;br/&gt;
    Control your DSLR with your Android phone<br/>
    over USB&lt;br/&gt;
	&lt;br/&gt;
    uses &lt;b&gt;&lt;a href="http://www.libraw.org"&gt;LibRaw&lt;/a&gt; for NEF processing 
	&lt;br/&gt;
	&lt;br/&gt;
    uses &lt;b&gt;&lt;a href="http://www.exiv2.org"&gt;Exiv2&lt;/a&gt; for Exif processing 
    </string>
    <string name="nocamera">
    &lt;font color="red"&gt;No DSLR camera found on USB&lt;/font&gt;
    </string>  
    
    <string name="pref_lv_category">Live view setting</string>
    <string name="pref_lv_at_startup">Live view at startup</string>
    <string name="pref_lv_return">Return to Live view after capture</string>
    <string name="pref_shooting">Shotting settings</string>
    <string name="pref_shooting_af">Auto focus before capture</string>
    <string name="pref_general_category">General</string>
    <string name="pref_general_keep_scrren_on">Keep screen always on</string>
    <string name="pref_general_internal_viewer">Use internal image viewer</string>
    <string name="pref_sdram_category">Image transfer</string>
    <string name="pref_sdram_location">Save location</string>
    <string name="pref_sdram_prefix">Image name prefix</string>
    <string name="pref_sdram_numbering">Image numbering</string>
    <string name="pref_gps_category">EXIF GPS location info</string>
    <string name="pref_gps_enabled">Add GPS location info to image</string>
    <string name="pref_gps_samples">GPS location samples to take</string>
    <string name="pref_gps_interval">GPS location sample timeout (min)</string>
    
    <string name="img_preview_exif">Exif</string>
    <string-array name="exifNames">
        <item>Exif.Photo.ExposureTime@Exposure</item>
        <item>Exif.Photo.FNumber@Aperture</item>
        <item>Exif.Photo.ISOSpeedRatings@ISO</item>
        <item>Exif.Photo.WhiteBalance@White Balance</item>
        <item>Exif.Photo.ExposureBiasValue@Exposure Bias</item>
        <item>Exif.Photo.ExposureProgram@Exposure program</item>
        <item>Exif.Photo.ExposureMode@Exposure Mode</item>
        <item>Exif.Photo.MeteringMode@Metering mode</item>
        <item>Exif.Photo.Flash@Flash</item>
        <item>Exif.Photo.FocalLength@Focal Length</item>
        <item>Exif.Image.Orientation@Orientation</item>
        <item>Exif.Image.ImageWidth@Image Width</item>
        <item>Exif.Image.ImageLength@Image Height</item>
        <item>Exif.Image.Make@Camera</item>
        <item>Exif.Image.Model@Model</item>
        <item>Exif.NikonLd3.LensIDNumber@Lens</item>
        <item>Exif.Photo.MaxApertureValue@Max Aperture value</item>
        <item>Exif.Photo.UserComment@Comment</item>
        <item>Exif.Image.DateTimeOriginal@Date and time</item>
    </string-array>    
</resources>
